syntax = "proto3";

package financialplanningcalculator;

option go_package = "financial";

enum Mode {
    INVESTMENTS = 0;
    DEBT = 1;
}

message Account {
    // Not all accounts accrue interest at the same rate. Some may accrue interest once per year, once per month, etc. Since we use periods we need to know how many periods before interest is calculated. So, on a bi-weekly paycheck you might choose to view interest every 2 periods.
    int64 AddInterestEveryNPeriods = 1;

    // The Balance of the account. 45.05
    double Balance = 2;
    int64 Id = 3;

    // The interest rate of hte account. %5.5 is 0.055.
    double InterestRate = 4;
    Mode Mode = 5;
    string Name = 6;
    int64 UserId = 7;
}

message Contribution {
    int64 AccountId = 1;
    double Amount = 2;
    int64 Id = 3;
}

message Error {
    string Message = 1;
}

message GetAccountsData {
    int64 UserId = 1;
}

message GetAccountsRequest {
    GetAccountsData data = 1;
}

message GetAccountsResponse {
    repeated Account Accounts = 1;
}

message GetCalculateData {
    int64 Periods = 1;
    int64 UserId = 2;
}

message GetCalculateRequest {
    GetCalculateData data = 1;
}

message GetCalculateResponse {
    repeated Period Periods = 1;
}

message GetContributionData {
    int64 AccountId = 1;
}

message GetContributionRequest {
    GetContributionData data = 1;
}

message GetGoalData {
    int64 UserId = 1;
}

message GetGoalsRequest {
    GetGoalData data = 1;
}

message GetGoalsResponse {
    repeated Goal Goals = 1;
}

message GetHealthRequest {
    message DataMessage {}

    DataMessage data = 1;
}

message GetHealthResponse {
    bool Ok = 1;
}

message GetUserData {
    string Email = 1;
}

message GetUserRequest {
    GetUserData data = 1;
}

message Goal {
    repeated int64 AccountIds = 1;
    double Balance = 2;
    int64 Id = 3;
    string Name = 4;
    int64 UserId = 5;
}

message Period {
    repeated Account Accounts = 1;
}

message PostAccountRequest {
    Account data = 1;
}

message PostAccountResponse {
    int64 Id = 1;
}

message PostContributionRequest {
    Contribution data = 1;
}

message PostContributionResponse {
    int64 Id = 1;
}

message PostGoalRequest {
    Goal data = 1;
}

message PostGoalResponse {
    int64 Id = 1;
}

message PostUserRequest {
    User data = 1;
}

message User {
    string Email = 1;
    int64 Id = 2;
}

message UserResponse {
    int64 Id = 1;
}

service FinancialPlanningCalculatorService {
    // Get accounts
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {}

    // Get a calculation for the user.
    rpc GetCalculate(GetCalculateRequest) returns (GetCalculateResponse) {}

    // Get an account contribution.
    rpc GetContribution(GetContributionRequest) returns (Contribution) {}

    // Get all goals for a user.
    rpc GetGoals(GetGoalsRequest) returns (GetGoalsResponse) {}

    // Health Check
    rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}

    // Get a new user.
    rpc GetUser(GetUserRequest) returns (User) {}

    // Create an account.
    rpc PostAccount(PostAccountRequest) returns (PostAccountResponse) {}

    // Create an account contribution.
    rpc PostContribution(PostContributionRequest) returns (PostContributionResponse) {}

    // Create a goal.
    rpc PostGoal(PostGoalRequest) returns (PostGoalResponse) {}

    // Create a new user.
    rpc PostUser(PostUserRequest) returns (UserResponse) {}
}